--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/*
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -29,5 +29,84 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+*/
+
+/* Skills */
+.skills-container {
+  padding: 2rem 0;
+}
+
+.skills-container h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.skills-container .grid-skills {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .skills-container .grid-skills {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.skills-container .grid-skills .skill-card {
+  background-color: #DADADB;
+  color: #1D1E20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0 1rem;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease-in-out;
+  cursor: context-menu;
+}
+
+.skills-container .grid-skills i {
+  font-size: 1.5rem;
+}
+
+.skills-container .grid-skills .html:hover {
+  background-color: #E34F26;
+}
+
+.skills-container .grid-skills .css:hover {
+  background-color: #264DE4;
+}
+
+.skills-container .grid-skills .js:hover {
+  background-color: #F7DF1E;
+}
+
+.skills-container .grid-skills .react:hover {
+  background-color: #61DAFB;
+}
+
+.skills-container .grid-skills .node:hover {
+  background-color: #339933;
+}
+
+.skills-container .grid-skills .python:hover {
+  background-color: #3776AB;
+}
+
+/* Projects */  
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* repeatの数値を変更して、何分割ごとに配置するかを変更可能 */
+  gap: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .projects-grid {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
